# commitchange-foundational-supporter

./: .gitignore  README.md  main.py  pyproject.toml  test_payments.csv
.beads/: issues.jsonl
templates/: index.html
