[project]
name = "commit-change-foundational-supporters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "pandas>=3.0.0",
    "python-multipart>=0.0.26",
    "typer>=0.21.1",
    "uvicorn>=0.44.0",
]
