[project]
name = "commit-change-foundational-supporters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["python-multipart", "jinja2"]
